--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ version '1.0-SNAPSHOT'
 
 // DEAD CODE ELIMINATION
 //use plugin when building production, otherwise it slows down compiler watch
-//apply plugin: "kotlin-dce-js"
+apply plugin: "kotlin-dce-js"
 apply plugin: "kotlin-platform-js"
 apply plugin: 'org.jetbrains.kotlin.frontend'
 
